resolved z-index to 0

--- a/tools/style.css
+++ b/tools/style.css
@@ -12,6 +12,10 @@ label {
   font-weight: 500;
 }
 
+.zi-0 {
+  z-index: 0;
+}
+
 body {
   font-family: "Roboto", sans-serif !important;
   font-weight: 400;
